# LLM-Tokenizer-Rust

./: Cargo.toml  README.md
src/: api.rs  counter.rs  errors.rs  lib.rs  tokenizer.rs
src/counter/: openai.rs  token.rs  utils.rs
src/counter/openai/: bpe.rs  load.rs  models.rs  openai_sets.rs  registry.rs
src/tokenizer/: openai.rs  utils.rs
src/tokenizer/openai/: README.md  bpe.rs  load.rs  models.rs  openai_sets.rs
