[package]
name = "langcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rustc-hash = "1"
bstr = "1"
rayon = "1"
rayon-core = "1"
tokio = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
